[gd_scene load_steps=10 format=2]

[ext_resource path="res://mini-game/scenes/decor/ForegroundSprite.gd" type="Script" id=2]
[ext_resource path="res://mini-game/ressources/backgrounds/fg6.png" type="Texture" id=3]
[ext_resource path="res://mini-game/ressources/backgrounds/fg2.png" type="Texture" id=5]
[ext_resource path="res://mini-game/ressources/backgrounds/fg1.png" type="Texture" id=6]
[ext_resource path="res://mini-game/ressources/backgrounds/fg3.png" type="Texture" id=7]
[ext_resource path="res://mini-game/ressources/backgrounds/fg5.png" type="Texture" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float scroll_speed;

void fragment(){
	vec2 u = UV;
	u.x += scroll_speed*TIME;
	vec4 color = texture(TEXTURE,u);
	COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scroll_speed = 0.0

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/road3.png-648b2e9aa7ca850c48819c6380f474a0.stex"

[node name="ForegroundSprite" type="Sprite"]
material = SubResource( 2 )
texture = SubResource( 3 )
offset = Vector2( 960, 540 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}
textures = [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 3 ) ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1930, 540 )

[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
